# deepform

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  baseline.py  config-defaults.yaml  create-training-data.py  create_training_data.py  docker-compose.yml  docker-requirements.txt  download-pdfs.py  features.py  freq_table.py  init_sweep.sh  policy.xml  pyproject.toml  requirements.txt  setup-hub.sh  source.py  sweep.yaml  tokenize-pdfs.py  tokenize_pdfs.py  tokenize_pdfs_2.py  train-unet.py  train.py  train2.py  train_Jonathan_summer_2019.py  util.py
.github/workflows/: docker-image.yml  python-app.yml
data/: 2014_manifest.tsv  create-training-data.py  download-pdfs.py  fcc-data-2020-labeled-manifest.csv  token_frequency.csv  tokenize-pdfs.py
db/: README.md  source.py
db/conf/: config-file.cnf
db/scripts/: create_schema.sql  load_token_data.sql
deepform/: add_features.py  artifacts.py  combine_manifests.py  common.py  convert_to_parquet.py  csv_to_parquet.py  document.py  document_store.py  features.py  infer.py  load_data.py  model.py  pdfs.py  train.py  util.py
deepform/data/: add_features.py  add_labels.py  create_vocabulary.py  csv_to_parquet.py  tokenize_pdfs.py
deepform/db/: source.py
deepform/db/scripts/: load_document_data.sql  load_token_data.sql
fcc-api/: README.md
fcc-api/opif-cdbs/: README.md  opif-cdbs.json  setup.py
fcc-api/opif-cdbs/docs/: CableApi.md  CableOperatorAddressUpdatePost.md  (+20 more)
fcc-api/opif-file-manager/: README.md  opif-file-manager.json  setup.py
fcc-api/solr-search/: README.md  setup.py  solr-search.json
lstm/: config.yaml  create_data_sets.py  dependencies.txt  get_committee_names.py  pre_process.py  train_basic.py
old/: README.md
old/lstm/: get_committee_names.py  pre_process.py  seq2seq_lstm.ipynb
old/s2s/: Deepform1.ipynb
s2s/: s2s_inference.py  s2s_load_weights_from_saved_model.py  s2s_model1.py
source/: README.md  source.py
tests/: test_add_features.py  test_convert_to_parquet.py  test_csv_to_parquet.py  test_util.py
wandb/run-20200423_051102-y10riiht/: config.yaml  requirements.txt  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_051113-t6qb0qko/: config.yaml  diff.patch  requirements.txt  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_051444-gy7s4kmi/: requirements.txt  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200423_053633-gn0i9wzu/: config.yaml  diff.patch  requirements.txt  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200423_053850-8na12xa5/: config.yaml  requirements.txt  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_053900-01kywm6p/: diff.patch  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_053911-bwf5rnci/: config.yaml  requirements.txt  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_054709-2f98kdfc/: diff.patch  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_054910-3l4jgcz1/: config.yaml  diff.patch  requirements.txt  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_055017-2j7hwlex/: requirements.txt  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200423_055037-3g2x8c8m/: diff.patch  wandb-events.jsonl  wandb-metadata.json
wandb/run-20200423_055115-p673xavn/: config.yaml  diff.patch  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200423_055409-2qxtn5ts/: diff.patch  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200423_055434-2zuq0dgd/: config.yaml  diff.patch  wandb-events.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200423_055530-1rpu13fh/: config.yaml  diff.patch  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
(+274 files in other folders)
